--- a/build.gradle
+++ b/build.gradle
@@ -18,4 +18,8 @@ dependencies {
 	testImplementation ('org.springframework.boot:spring-boot-starter-test')
 	compileOnly('org.projectlombok:lombok')
 	annotationProcessor("org.projectlombok:lombok")
+    implementation('mysql:mysql-connector-java')
+	implementation ('org.springframework.boot:spring-boot-starter-jdbc')
+	implementation ('org.springframework.boot:spring-boot-starter-data-jpa')
+	implementation ('org.springframework.boot:spring-boot-starter-validation')
 }
