--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+# DATABASE CONFIGURATION
+spring.datasource.url=jdbc:mysql://localhost:3306/nbp_test?serverTimezone=Europe/Warsaw&useSSL=False
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=mysql
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.username=nbp_user
+spring.datasource.password=nbp_password
