--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # DATABASE CONFIGURATION
-spring.datasource.url=jdbc:mysql://localhost:3306/nbp_test?serverTimezone=Europe/Warsaw&useSSL=False
+spring.datasource.url=jdbc:mysql://localhost:3306/nbp_test?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
